--- a/prom.html
+++ b/prom.html
@@ -40,6 +40,24 @@
             <button type="submit">Guardar</button>>
         </div>
     </form>
+    <table border="1">
+        <tr>
+            <tr>
+                <th> </th>
+                <th>Codigo</th>
+                <th>Nombre</th>
+                <th>20%</th>
+                <th>20%</th>
+                <th>20%</th>
+                <th>40%</th>
+                <th>Definitiva</th>
+                <th>A/No</th>
+              </tr>   
+            </thead>
+            <tbody>
+            </tbody>
+         </table>
+    </table>
     <script src="prom.js"></script>
 </body>
 </html>
