--- a/prom.html
+++ b/prom.html
@@ -10,7 +10,7 @@
         <div>
             <label>codigo: </label>
             <input type="text" name="codigoInp" required>
-            <div id="codigoError"> </div>
+            <div id="msg"> </div>
         </div>
         <div> 
             <label>nombre: </label>
@@ -33,7 +33,7 @@
             <input type="text" name="nota4">
         </div>
         <div>
-            <button type="submit">Guardar</button>>
+            <button type="submit">Guardar</button>
         </div>
     </form>
     <table border="1">
