--- a/prom.html
+++ b/prom.html
@@ -31,7 +31,7 @@
         <div>
             <label>Código: </label>
             <input type="text" name="codigoInp" id="codigo" required>
-            <div id="msgCodigo"></div>
+            <p id="msgError"></p>
         </div>
         <div> 
             <label>Nombre: </label>
